// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PartyBox with default value 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center w-44 lg:w-52 m-1 sm:m-2 lg:m-3 shadow-md border border-gray-100 rounded-md bg-white"
  >
    <img
      alt="No Image"
      class="w-auto h-44 lg:h-52 rounded-t-md"
      data-testid="image"
      src="noimage.png"
    />
    <span
      class="p-2 text-md lg:text-lg max2line h-14 lg:h-16"
    />
    <div
      class="border-t border-gray-300 flex flex-row p-2"
    >
      <span
        class="flex w-2/5 text-sm justify-start items-center"
      >
        undefined/undefined
      </span>
      <button
        class="w-3/5 text-sm py-1"
      >
        เข้าร่วม
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render PartyBox with some value 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center w-44 lg:w-52 m-1 sm:m-2 lg:m-3 shadow-md border border-gray-100 rounded-md bg-white"
  >
    <img
      alt="test url"
      class="w-auto h-44 lg:h-52 rounded-t-md"
      data-testid="image"
      src="test url"
    />
    <span
      class="p-2 text-md lg:text-lg max2line h-14 lg:h-16"
    >
      test
    </span>
    <div
      class="border-t border-gray-300 flex flex-row p-2"
    >
      <span
        class="flex w-2/5 text-sm justify-start items-center"
      >
        2/10
      </span>
      <button
        class="w-3/5 text-sm py-1"
      >
        เข้าร่วม
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render PartyBox with status full 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center w-44 lg:w-52 m-1 sm:m-2 lg:m-3 shadow-md border border-gray-100 rounded-md bg-white"
  >
    <img
      alt="test url"
      class="w-auto h-44 lg:h-52 rounded-t-md"
      data-testid="image"
      src="test url"
    />
    <span
      class="p-2 text-md lg:text-lg max2line h-14 lg:h-16"
    >
      test
    </span>
    <div
      class="border-t border-gray-300 flex flex-row p-2"
    >
      <span
        class="flex w-2/5 text-sm justify-start items-center"
      >
        2/10
      </span>
      <button
        class="w-3/5 text-sm py-1 bg-gray-400"
        disabled=""
      >
        เต็ม
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render PartyBox with status joined 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center w-44 lg:w-52 m-1 sm:m-2 lg:m-3 shadow-md border border-gray-100 rounded-md bg-white"
  >
    <img
      alt="test url"
      class="w-auto h-44 lg:h-52 rounded-t-md"
      data-testid="image"
      src="test url"
    />
    <span
      class="p-2 text-md lg:text-lg max2line h-14 lg:h-16"
    >
      test
    </span>
    <div
      class="border-t border-gray-300 flex flex-row p-2"
    >
      <span
        class="flex w-2/5 text-sm justify-start items-center"
      >
        2/10
      </span>
      <button
        class="w-3/5 text-sm py-1 bg-blue-400"
      >
        ออกปาร์ตี้
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render PartyBox with status none 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center w-44 lg:w-52 m-1 sm:m-2 lg:m-3 shadow-md border border-gray-100 rounded-md bg-white"
  >
    <img
      alt="test url"
      class="w-auto h-44 lg:h-52 rounded-t-md"
      data-testid="image"
      src="test url"
    />
    <span
      class="p-2 text-md lg:text-lg max2line h-14 lg:h-16"
    >
      test
    </span>
    <div
      class="border-t border-gray-300 flex flex-row p-2"
    >
      <span
        class="flex w-2/5 text-sm justify-start items-center"
      >
        2/10
      </span>
      <button
        class="w-3/5 text-sm py-1"
      >
        เข้าร่วม
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render PartyBox with status owned 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-center w-44 lg:w-52 m-1 sm:m-2 lg:m-3 shadow-md border border-gray-100 rounded-md bg-white"
  >
    <img
      alt="test url"
      class="w-auto h-44 lg:h-52 rounded-t-md"
      data-testid="image"
      src="test url"
    />
    <span
      class="p-2 text-md lg:text-lg max2line h-14 lg:h-16"
    >
      test
    </span>
    <div
      class="border-t border-gray-300 flex flex-row p-2"
    >
      <span
        class="flex w-2/5 text-sm justify-start items-center"
      >
        2/10
      </span>
      <button
        class="w-3/5 text-sm py-1 bg-red-400"
      >
        ลบปาร์ตี้
      </button>
    </div>
  </div>
</DocumentFragment>
`;
